web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-parameter7/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,8)
1|async (await) => 42
 |      ^
